[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/theme.tres" type="Theme" id=1]
[ext_resource path="res://MatchScreen.gd" type="Script" id=2]

[node name="MatchScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -1.0
margin_right = 3.0
margin_bottom = -1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1073.0
margin_bottom = 513.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="MatchPanel" type="Panel" parent="PanelContainer/VBoxContainer"]
margin_right = 1066.0
margin_bottom = 162.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MatchPanel"]
margin_left = 28.0
margin_top = 50.0
margin_right = 338.0
margin_bottom = 98.0
text = "Find at least"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox" type="SpinBox" parent="PanelContainer/VBoxContainer/MatchPanel"]
margin_left = 339.0
margin_top = 47.0
margin_right = 641.0
margin_bottom = 105.0
min_value = 2.0
max_value = 4.0
value = 2.0
align = 1
suffix = "players"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MatchButton" type="Button" parent="PanelContainer/VBoxContainer/MatchPanel"]
margin_left = 860.0
margin_top = 41.0
margin_right = 1035.0
margin_bottom = 120.0
text = "Match"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreatePanel" type="Panel" parent="PanelContainer/VBoxContainer"]
margin_top = 172.0
margin_right = 1066.0
margin_bottom = 334.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/CreatePanel"]
margin_left = 29.0
margin_top = 55.0
margin_right = 535.0
margin_bottom = 103.0
text = "Create a private match"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateButton" type="Button" parent="PanelContainer/VBoxContainer/CreatePanel"]
margin_left = 859.0
margin_top = 38.0
margin_right = 1034.0
margin_bottom = 117.0
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinPanel" type="Panel" parent="PanelContainer/VBoxContainer"]
margin_top = 344.0
margin_right = 1066.0
margin_bottom = 506.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/JoinPanel"]
margin_left = 31.0
margin_top = 57.0
margin_right = 468.0
margin_bottom = 105.0
text = "Join match with ID:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/JoinPanel"]
margin_left = 473.0
margin_top = 57.0
margin_right = 759.0
margin_bottom = 115.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="PanelContainer/VBoxContainer/JoinPanel"]
margin_left = 857.0
margin_top = 41.0
margin_right = 1032.0
margin_bottom = 120.0
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PanelContainer/VBoxContainer/MatchPanel/MatchButton" to="." method="_on_MatchButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/CreatePanel/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/JoinPanel/JoinButton" to="." method="_on_JoinButton_pressed"]
